bugfix open_basedir

--- a/.provision/wordpress.conf
+++ b/.provision/wordpress.conf
@@ -14,7 +14,7 @@
 
         php_admin_flag engine on
         php_admin_flag safe_mode on
-        php_admin_value open_basedir "/var/www/wordpress:/tmp"
+        php_admin_value open_basedir "/var/www/wordpress/:/srv/theme/:/tmp"
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
         # error, crit, alert, emerg.
