--- a/.provision/wordpress.conf
+++ b/.provision/wordpress.conf
@@ -1,4 +1,7 @@
-                                                                                            
+<Directory "/var/www/wordpress/">
+        AllowOverride All
+</Directory>
+
 <VirtualHost *:80>
         # The ServerName directive sets the request scheme, hostname and port that
         # the server uses to identify itself. This is used when creating
@@ -12,11 +15,13 @@
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/wordpress
 
+        Options Indexes FollowSymLinks MultiViews
+        
         php_admin_flag engine on
         php_admin_flag safe_mode on
         php_admin_value open_basedir "/var/www/wordpress/:/srv/theme/:/tmp"
 
-        # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
+        # Available loglevels: trace8, ..., trazce1, debug, info, notice, warn,
         # error, crit, alert, emerg.
         # It is also possible to configure the loglevel for particular
         # modules, e.g.
